--- a/src/DynamoRevitIcons/DynamoRevitIcons.csproj
+++ b/src/DynamoRevitIcons/DynamoRevitIcons.csproj
@@ -29,12 +29,29 @@
 		</GetReferenceAssemblyPaths>
 		<!-- Ensure AssemblyInfoGenerator is fully built before we try to read its version -->
 		<!-- This is critical for Jenkins builds where build order might not be guaranteed -->
-		<!-- Use Rebuild target to ensure we get a fresh DLL with version information -->
+		<!-- Clean first to remove any stale DLLs, then build to ensure fresh DLL with version information -->
 		<!-- This is especially important for Debug builds where incremental builds might use stale DLLs -->
 		<MSBuild Projects="$(SolutionDir)AssemblySharedInfoGenerator\AssemblyInfoGenerator.csproj"
-				 Targets="Rebuild"
+				 Targets="Clean"
 				 Properties="Configuration=$(Configuration);Platform=$(Platform)"
 				 ContinueOnError="false" />
+		<!-- Build AssemblyInfoGenerator and capture the output path -->
+		<!-- Use StopOnFirstFailure to ensure we catch any build errors -->
+		<MSBuild Projects="$(SolutionDir)AssemblySharedInfoGenerator\AssemblyInfoGenerator.csproj"
+				 Targets="Build"
+				 Properties="Configuration=$(Configuration);Platform=$(Platform);BuildProjectReferences=false"
+				 ContinueOnError="false"
+				 StopOnFirstFailure="true">
+			<Output TaskParameter="TargetOutputs" ItemName="_BuiltAssemblyInfoGenerator" />
+		</MSBuild>
+		<!-- Diagnostic: Log what was built -->
+		<Message Importance="high" Text="AssemblyInfoGenerator build completed. Output items: @(_BuiltAssemblyInfoGenerator)" />
+		<!-- Verify the DLL was actually created after build -->
+		<PropertyGroup>
+			<_ExpectedDllPath>$(SolutionDir)AssemblySharedInfoGenerator\bin\AssemblyInfoGenerator.dll</_ExpectedDllPath>
+		</PropertyGroup>
+		<Error Condition="!Exists('$(_ExpectedDllPath)')" Text="AssemblyInfoGenerator.dll was not created after build. Expected at: $(_ExpectedDllPath). Configuration: $(Configuration), Platform: $(Platform). The build may have failed silently." />
+		<Message Importance="high" Condition="Exists('$(_ExpectedDllPath)')" Text="Verified AssemblyInfoGenerator.dll exists at: $(_ExpectedDllPath)" />
 		<!-- Get the actual output path from AssemblyInfoGenerator project -->
 		<!-- This ensures we use the correct path regardless of OutputPath settings -->
 		<MSBuild Projects="$(SolutionDir)AssemblySharedInfoGenerator\AssemblyInfoGenerator.csproj"
@@ -45,13 +62,17 @@
 		</MSBuild>
 		<!-- Resolve the correct path to AssemblyInfoGenerator.dll -->
 		<PropertyGroup>
-			<!-- Use the target path from MSBuild if available -->
-			<_AssemblyInfoGeneratorPath Condition="'@(_AssemblyInfoGeneratorTargetPath)' != ''">%(_AssemblyInfoGeneratorTargetPath.Identity)</_AssemblyInfoGeneratorPath>
+			<!-- Use the built output if available from Build target -->
+			<_AssemblyInfoGeneratorPath Condition="'@(_BuiltAssemblyInfoGenerator)' != ''">%(_BuiltAssemblyInfoGenerator.Identity)</_AssemblyInfoGeneratorPath>
+			<!-- Use the target path from GetTargetPath if available -->
+			<_AssemblyInfoGeneratorPath Condition="'$(_AssemblyInfoGeneratorPath)' == '' AND '@(_AssemblyInfoGeneratorTargetPath)' != ''">%(_AssemblyInfoGeneratorTargetPath.Identity)</_AssemblyInfoGeneratorPath>
 			<!-- Fallback to known paths if MSBuild didn't return a path -->
 			<_AssemblyInfoGeneratorPath Condition="'$(_AssemblyInfoGeneratorPath)' == ''">$(SolutionDir)AssemblySharedInfoGenerator\bin\AssemblyInfoGenerator.dll</_AssemblyInfoGeneratorPath>
 			<!-- Alternative path in case output goes to standard location from CS_SDK.props -->
 			<_AssemblyInfoGeneratorAltPath>$(SolutionDir)..\bin\$(Platform)\$(Configuration)\Revit\AssemblyInfoGenerator.dll</_AssemblyInfoGeneratorAltPath>
 		</PropertyGroup>
+		<!-- Diagnostic: Log all possible paths -->
+		<Message Importance="high" Text="Resolved AssemblyInfoGenerator paths - Primary: $(_AssemblyInfoGeneratorPath), Alternative: $(_AssemblyInfoGeneratorAltPath)" />
 		<!-- Wait a moment to ensure the DLL is fully written and not locked (helps with timing issues in Jenkins) -->
 		<Exec Command="timeout /t 1 /nobreak &gt;nul 2&gt;&amp;1 || ping 127.0.0.1 -n 2 &gt;nul" ContinueOnError="true" />
 		<!-- Diagnostic: Log the path we're trying to read from -->
