--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -2,5 +2,6 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
       <REVITAPI Condition=" !Exists('$(REVITAPI)') ">$(SolutionDir)..\lib\Revit Preview Release\net10.0</REVITAPI>
+      <REVITAPI Condition=" !Exists('$(REVITAPI)') ">D:\src\git.adsk\Revit\dev1\revit\Debugx64</REVITAPI>
   </PropertyGroup>
 </Project>
