Fix RevitServicesTests build failure by adding explicit NUnit references
The RevitServicesTests project was failing to compile with CS0246 errors
because NUnit types (TestFixture, Test, SetUp, etc.) could not be found.

Root cause: The project only had an indirect dependency on NUnit through
DynamoVisualProgramming.Tests with ExcludeAssets="runtime". When building
with DynamoCore version 4.0.0.3277, NUnit was not properly exposed as a
transitive dependency, causing the compilation to fail.

Solution: Add explicit PackageReference entries for NUnit and
NUnit3TestAdapter, matching the pattern used in other test projects
like RevitTestServices.

This ensures NUnit types are always available regardless of the
DynamoCore version being used.

Testing branches:
- DynamoRevit: fusneif/test
- DynamoRevitUtils: fusneif/REVIT-243448/F4R2027-ECS2Azure

--- a/test/Libraries/RevitServicesTests/RevitServicesTests.csproj
+++ b/test/Libraries/RevitServicesTests/RevitServicesTests.csproj
@@ -70,5 +70,7 @@ limitations under the License.
       <Private>False</Private>
     </ProjectReference>
     <PackageReference Include="DynamoVisualProgramming.Tests" Version="$(DYNAMOTESTS_VERSION)" ExcludeAssets="runtime" />
+    <PackageReference Include="NUnit" Version="$(NUnit_VERSION)" />
+    <PackageReference Include="NUnit3TestAdapter" Version="$(NUnit3TestAdapter_VERSION)" />
   </ItemGroup>
 </Project>
